# quick_test

./: README.md
active_learning/: cifar_classification.py  gaussian_regression.py
database_sampler/: database_sampler.py
pfn_extensions/: pfn_extensions.py
poetry_test/: pyproject.toml
poetry_test/poetry_test/: version.py
poetry_test/tests/: version_test.py
wandb/: latest-run  model_linear_test.pth  wandb_logging.py
wandb/run-20240725_110223-6mvtbprw/: run-6mvtbprw.wandb
wandb/run-20240725_110223-6mvtbprw/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20240725_110524-eax94chg/: run-eax94chg.wandb
wandb/run-20240725_110524-eax94chg/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20240725_110646-segkzh5k/: run-segkzh5k.wandb
wandb/run-20240725_110646-segkzh5k/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20240725_110729-26mwbb8r/: run-26mwbb8r.wandb
wandb/run-20240725_110729-26mwbb8r/files/: conda-environment.yaml  config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20240725_110746-e7mugcpa/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20240725_111058-npt20nsu/: run-npt20nsu.wandb
wandb/run-20240725_111146-pdsxsopy/: run-pdsxsopy.wandb
wandb/run-20240725_111205-d022z9j4/: run-d022z9j4.wandb
wandb/run-20240725_111220-623ne5ai/: run-623ne5ai.wandb
wandb/run-20240725_111246-4mqg19kl/: run-4mqg19kl.wandb
wandb/run-20240725_111326-st5zyzot/: run-st5zyzot.wandb
wandb/run-20240725_111545-g1zn7626/: run-g1zn7626.wandb
(+22 files in other folders)
