[tool.poetry]
name = "poetry-test"
version = "0.1.0"
description = ""
authors = ["Jixin Han <kalfazed@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gpustat = "^1.1.1"
mpi4py = "^4.0.0"
pre-commit = "^3.8.0"
pytest = "^8.3.2"
pytorch-pfn-extras = "^0.7.7"
pyyaml = "^6.0.2"
requests = "^2.32.3"
nuscenes-devkit = "^1.1.11"
onnx = "^1.16.2"
spconv-cu120 = "^2.3.6"
tabulate = "^0.9.0"
tqdm = "^4.66.5"
wandb = "^0.17.6"
ujson = "^5.10.0"
graphviz = "^0.20.3"
torchinfo = "^1.8.0"
torchview = "^0.2.6"
numpy = "^2.0.1"
torch = "^2.4.0"

[[tool.poetry.source]]
name = "torch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
